--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -16,6 +16,13 @@
 {% endblock %}
 
 {% block body %}
+<div class="text-center mb-4">
+    <h2 class="text-success">
+        <i class="fa-solid fa-utensils me-2"></i>
+        Cuisinotes
+    </h2>
+</div>
+
 <div class="row justify-content-center mt-5">
     <div class="col-md-6 col-lg-5">
         <div class="card shadow-sm">
